# gtp-guard

./: .gitignore  Makefile  README.md  VERSION  meson.build
.github/workflows/: actions-compile.yml  build-deb.yml  codacy.yml  codeql.yml
debian/: changelog  control  gtp-guard.service  rules
doc/: Cisco-CSR1kv-setup.md  json.md  mkdocs.yml  readme-mkdocs.txt
doc/ASN.1/: gtp-guard.asn
doc/docs/: index.md
doc/docs/articles/: 5g-upf-from-flow-steering-to-session-affinity.md  5g-upf-pump-up-the-volume.md  5g-upf-smart-session-placement.md  cpu_load_measurement.md  index.md
doc/docs/releases/: index.md  release-1.0.0.md  release-1.0.3.md  release-1.0.5.md  release-1.0.6.md  release-1.0.7.md
doc/docs/stylesheets/: extra.css
doc/meson/: README.md
doc/overrides/partials/: header.html
lib/: Makefile  addr.c  addr.h  asn1.h  asn1_ber_bytecode.h  asn1_decoder.c  asn1_decoder.h  asn1_encoder.c  asn1_encoder.h  bitops.h  buffer.c  buffer.h  command.c  command.h  config.h  config.h.in  container.h  cpu.c  cpu.h  daemon.c  daemon.h  disk.c  disk.h  ethtool.c  ethtool.h  id_pool.c  id_pool.h  inet_server.c  inet_server.h  inet_utils.c  inet_utils.h  ip_pool.c  ip_pool.h  jhash.h  json_reader.c  json_reader.h  json_writer.c  json_writer.h  lease_pool.c  lease_pool.h  (+52 more)
src/: Makefile  gtp_apn.c  gtp_apn_metrics.c  gtp_apn_vty.c  gtp_bpf.c  gtp_bpf_capture.c  gtp_bpf_fwd.c  gtp_bpf_ifrules.c  gtp_bpf_iptnl.c  gtp_bpf_mape.c  gtp_bpf_mirror.c  gtp_bpf_ppp.c  gtp_bpf_prog.c  gtp_bpf_prog_vty.c  gtp_bpf_rt.c  gtp_bpf_xsk.c  gtp_cdr.c  gtp_cdr_asn1.c  gtp_cdr_file.c  gtp_cdr_spool.c  gtp_cdr_vty.c  gtp_cmd.c  gtp_conn.c  gtp_cpu.c  gtp_cpu_sched.c  gtp_cpu_vty.c  gtp_data.c  gtp_disk.c  gtp_dlock.c  gtp_dpd.c  gtp_flow_steering.c  gtp_flow_steering_vty.c  gtp_handle.c  gtp_handle_v1.c  gtp_handle_v2.c  gtp_htab.c  gtp_if.c  gtp_interface.c  gtp_interface_ethtool.c  gtp_interface_metrics.c  (+60 more)
src/bpf/: Makefile  capture_trace.c  cgn.c  gtp.h  gtp_bpf_utils.h  gtp_fwd-ifr.c  gtp_fwd-prevgen.c  gtp_fwd.c  gtp_fwd.h  gtp_fwd_mirror.c  gtp_mirror.c  gtp_route.c  mape.c  meson.build  sock_rps.c  test_cgn.c  upf.c  upf_cgn.c  xdp_pass.c
src/bpf/lib/: capture-def.h  capture.h  cgn-def.h  cgn.h  flow-def.h  flow.h  gtp_fwd-def.h  gtp_fwd.h  gtp_mirror.h  if_rule-def.h  if_rule-priv.h  if_rule.h  ip6fw.h  mape-def.h  mape.h  tools.h  upf-def.h  upf.h  upf_urr.h  xsk-def.h  xsk.h
src/carrier-grade-nat/: Makefile  addr.c  cdr_fwd.c  cdr_fwd_adj.c  cdr_fwd_disk.c  cdr_fwd_spool.c  cdr_fwd_vty.c  cgn.c  cgn_blog.c  cgn_bpf.c  cgn_flow.c  cgn_vty.c  meson.build  tools.c
src/carrier-grade-nat/include/: addr.h  cdr_avp.h  cdr_fwd-priv.h  cdr_fwd.h  cgn-priv.h  cgn.h  cgn_vty.h  tools.h
src/include/: gtp.h  gtp_apn.h  gtp_apn_metrics.h  gtp_apn_vty.h  gtp_bpf.h  gtp_bpf_capture.h  gtp_bpf_fwd.h  gtp_bpf_ifrules.h  gtp_bpf_iptnl.h  gtp_bpf_mirror.h  gtp_bpf_ppp.h  gtp_bpf_prog.h  gtp_bpf_prog_vty.h  gtp_bpf_rt.h  gtp_bpf_utils.h  gtp_bpf_xsk.h  gtp_cdr.h  gtp_cdr_asn1.h  gtp_cdr_file.h  gtp_cdr_spool.h  gtp_cdr_vty.h  gtp_cmd.h  gtp_conn.h  gtp_cpu.h  gtp_cpu_sched.h  gtp_data.h  gtp_disk.h  gtp_dlock.h  gtp_dpd.h  gtp_flow_steering.h  gtp_guard.h  gtp_handle.h  gtp_handle_v1.h  gtp_handle_v2.h  gtp_htab.h  gtp_if.h  gtp_interface.h  gtp_interface_ethtool.h  gtp_interface_rule.h  gtp_interface_rxq.h  (+52 more)
src/pfcp/: Makefile  meson.build  pfcp.c  pfcp_assoc.c  pfcp_bpf.c  pfcp_ie.c  pfcp_metrics.c  pfcp_msg.c  pfcp_msg_parse.c  pfcp_proto.c  pfcp_proto_dump.c  pfcp_proto_fsm.c  pfcp_proto_hdl.c  pfcp_router.c  pfcp_router_hdl.c  pfcp_router_vty.c  pfcp_server.c  pfcp_session.c  pfcp_session_ctx.c  pfcp_session_report.c  pfcp_session_vty.c  pfcp_teid.c  pfcp_utils.c
src/pfcp/include/: pfcp.h  pfcp_assoc.h  pfcp_bpf.h  pfcp_ie.h  pfcp_ie_group.h  pfcp_metrics.h  pfcp_msg.h  pfcp_proto.h  pfcp_proto_dump.h  pfcp_proto_fsm.h  pfcp_proto_hdl.h  pfcp_router.h  pfcp_router_hdl.h  pfcp_server.h  pfcp_session.h  pfcp_session_report.h  pfcp_teid.h  pfcp_utils.h
src/pppoe/: Makefile  meson.build  ppp.c  pppoe.c  pppoe_metrics.c  pppoe_monitor.c  pppoe_proto.c  pppoe_session.c  pppoe_vty.c
src/pppoe/include/: ppp.h  ppp_session.h  pppoe.h  pppoe_metrics.h  pppoe_monitor.h  pppoe_proto.h  pppoe_session.h  pppoe_vty.h
subprojects/: libbpf.wrap  libxdp.wrap
subprojects/packagefiles/libbpf/: get_version.sh  meson.build
subprojects/packagefiles/libxdp/: get_version.sh  meson.build
test/: _gtpg_cmd.sh  cgn.sh  cgn_gre.sh  cgn_gre_setup.sh  cgn_iface-vlan.sh  cgn_iface.sh  cgn_setup.sh  cgn_vlan.sh  cgn_vlan2_setup.sh  cgn_vlan_setup.sh  gtp-proxy.sh  gtpguardjson.py  gtpu-ping.py  mape.sh  smf.py  testenv.sh  upf.sh
test/conf/: cgn-test.conf  cgn-tunnel.conf  cgn-vlan.conf  gtp-fwd-mirror.conf  minimal.conf  test-cgn.conf  upf-smf.conf
tools/: watch_netlink.py
tools/selftests/: meson.build
tools/selftests/carrier-grade-nat/: glue.c  main.c  meson.build
tools/selftests/ip-pfx-split/: ip-pfx-split.c
tools/selftests/ip-pool/: main.c  meson.build
tools/selftests/lease-pool-shuffle/: main.c  meson.build
tools/selftests/lib-thread/: Makefile  main.c  meson.build
tools/selftests/libcdrfwd/: Makefile  cdr_test.c  meson.build
tools/selftests/pGW-cdr/: Makefile  main.c  meson.build
tools/selftests/resolv-naptr/: Makefile  main.c  meson.build  test-resolv
tools/webservice/: README.md  nginx-gtp-guard  systemd-gtp-guard-WS.service
tools/webservice/www/: wsgi.py
tools/webservice/www/app/: __init__.py  routes.py
