# SPDX-License-Identifier: AGPL-3.0-or-later 

lib_src = files(
  'addr.c',
  'asn1_decoder.c',
  'asn1_encoder.c',
  'buffer.c',
  'command.c',
  'daemon.c',
  'disk.c',
  'inet_server.c',
  'inet_utils.c',
  'ip_pool.c',
  'json_reader.c',
  'json_writer.c',
  'list_head.c',
  'logger.c',
  'md5.c',
  'memory.c',
  'mempool.c',
  'pidfile.c',
  'pkt_buffer.c',
  'prefix.c',
  'process.c',
  'rbtree.c',
  'rt_table.c',
  'signals.c',
  'timer.c',
  'thread.c',
  'utils.c',
  'vector.c',
  'vty.c',
  'table.c',
)
src += lib_src

inc += include_directories('.')
