# SPDX-License-Identifier: AGPL-3.0-or-later 

subdir('pppoe')
subdir('pfcp')
subdir('carrier-grade-nat')
subdir('bpf')

src += files(
  'gtp_apn.c',
  'gtp_apn_metrics.c',
  'gtp_apn_vty.c',
  'gtp_bpf_fwd.c',
  'gtp_bpf_iptnl.c',
  'gtp_bpf_mirror.c',
  'gtp_bpf_ppp.c',
  'gtp_bpf_prog.c',
  'gtp_bpf_prog_vty.c',
  'gtp_bpf_rt.c',
  'gtp_cdr_asn1.c',
  'gtp_cdr.c',
  'gtp_cdr_file.c',
  'gtp_cdr_spool.c',
  'gtp_cdr_vty.c',
  'gtp_cmd.c',
  'gtp_conn.c',
  'gtp_data.c',
  'gtp_disk.c',
  'gtp_dpd.c',
  'gtp_interface.c',
  'gtp_interface_metrics.c',
  'gtp_interface_rule.c',
  'gtp_interface_vty.c',
  'gtp_metrics.c',
  'gtp_mirror.c',
  'gtp_mirror_vty.c',
  'gtp_msg.c',
  'gtp_netlink.c',
  'gtp_proxy.c',
  'gtp_proxy_hdl.c',
  'gtp_proxy_hdl_v1.c',
  'gtp_proxy_hdl_v2.c',
  'gtp_proxy_vty.c',
  'gtp_request.c',
  'gtp_resolv.c',
  'gtp_router.c',
  'gtp_router_hdl.c',
  'gtp_router_metrics.c',
  'gtp_router_vty.c',
  'gtp_sched.c',
  'gtp_server.c',
  'gtp_session.c',
  'gtp_session_vty.c',
  'gtp_sqn.c',
  'gtp_teid.c',
  'gtp_utils.c',
  'gtp_utils_uli.c',
  'gtp_ip_pool.c',
  'gtp_ip_pool_vty.c',
  'gtp_vrf.c',
  'gtp_vrf_vty.c',
  'gtp_vty.c',
  'main.c',
)

inc += include_directories('include')
