# SPDX-License-Identifier: AGPL-3.0-or-later 

src += files(
  'pfcp.c',
  'pfcp_assoc.c',
  'pfcp_ie.c',
  'pfcp_metrics.c',
  'pfcp_msg.c',
  'pfcp_router.c',
  'pfcp_proto_fsm.c',
  'pfcp_proto_dump.c',
  'pfcp_router_vty.c',
  'pfcp_server.c',
  'pfcp_utils.c',
)

inc += include_directories('include')
